# frp-reflex-talk

./: .gitmodules  README.md
tea/: .gitignore  Makefile  package.json  stack.yaml  tea.cabal
tea/exe/: Main.hs
tea/src/: Common.hs  Tea.hs  Timer.hs  Widget.hs
tea/static/scss/: style.scss
