name:                tea
author:              tippenein
version:             0.0.0.1
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
      Tea
    , Widget
    , Common

  build-depends:
      base
    , text
    , time
    , transformers
    , lens
    , data-default
    , Decimal
    , ghcjs-base
    , ghcjs-dom
    , haskell-src-exts >= 1.16 && < 1.18
    , reflex
    , reflex-dom
    , containers == 0.5.*
    , safe == 0.3.*
  default-language:    Haskell2010
  ghc-options: -fno-warn-missing-signatures

executable pres
  hs-source-dirs:      exe
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fno-warn-missing-signatures
  build-depends:
      base
    , tea
    , aeson
    , time
    , haskell-src-exts >= 1.16 && < 1.18
    , reflex
    , reflex-dom
    , containers == 0.5.*
    , safe == 0.3.*
  default-language:    Haskell2010
